<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:itemListActivity=".activities.MainActivity">

    <Button
        android:id="@+id/button_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startOfferActivity"
        android:text="@string/offers" />

    <Button
        android:id="@+id/button_pending_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startPendingOrdersActivity"
        android:text="@string/pending_orders" />

    <Button
        android:id="@+id/button_accepted_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startAcceptedOrdersActivity"
        android:text="@string/accepted_orders" />
    <Button
        android:id="@+id/button_dispatched_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startDispatchedOrdersActivity"
        android:text="@string/dispatched_orders" />
    <Button
        android:id="@+id/button_delivered_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startDeliveredOrdersActivity"
        android:text="@string/delivered_orders" />

    <Button
        android:id="@+id/inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loadInventory"
        android:text="@string/inventory" />
</LinearLayout>