<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/item_name" />

        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:cursorVisible="true"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:textCursorDrawable="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/item_section" />

        <EditText
            android:id="@+id/item_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:cursorVisible="true"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:textCursorDrawable="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/item_category" />

        <EditText
            android:id="@+id/item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:cursorVisible="true"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:textCursorDrawable="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/item_price" />

        <EditText
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:cursorVisible="true"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:inputType="number"
            android:textCursorDrawable="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/item_discount" />

        <EditText
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:cursorVisible="true"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:inputType="number"
            android:maxLength="2"
            android:textCursorDrawable="@null" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/item_image_url" />

        <EditText
            android:id="@+id/item_image_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:cursorVisible="true"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:drawableRight="@android:drawable/ic_menu_view"
            android:drawableEnd="@android:drawable/ic_menu_view"
            android:inputType="textUri"
            android:textCursorDrawable="@null" />

        <Spinner
            android:id="@+id/vegetarian_preference_control_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/in_stock_control_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="true"
            android:text="In-stock"
            android:textSize="15sp"
            app:theme="@style/BrandedSwitch"
            tools:ignore="HardcodedText" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary">

            <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:clickable="false"
                android:padding="5dp"
                android:visibility="gone"
                app:SpinKit_Color="@android:color/white" />

            <TextView
                android:id="@+id/status_change_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center"
                android:onClick="verifyAndUpdateItem"
                android:tag="new state"
                android:text="UPDATE"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@android:color/holo_red_light">

            <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/spin_kit_delete_item"
                style="@style/SpinKitView.Wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:clickable="false"
                android:padding="5dp"
                android:visibility="gone"
                app:SpinKit_Color="@android:color/white" />

            <TextView
                android:id="@+id/delete_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center"
                android:onClick="deleteItem"
                android:tag="new state"
                android:text="DELETE"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>